# kslovar-svn

branches/0.2/: ChangeLog  Doxyfile  README
branches/0.2/src/: kslovar.desktop  kslovar.lsm  main.cpp
branches/0.2/src/configuration/: ksconfigdialog.cpp  ksconfigdialog.h  kslovar.kcfg
branches/0.2/src/configuration/ui/: ksappearancewdt.ui  kswizardwzt.ui
branches/0.2/src/dialog/: kscharselect.cpp  ksconversion.cpp  ksconversion.h  ksdictionary.cpp  ksdictionary.h  kslanguage.cpp  ksphrase.cpp  ksphrase.h
branches/0.2/src/dialog/ui/: ksconversionwdt.ui  ksupgrademanagerwdt.ui  void.cpp
branches/0.2/src/handler/: ksdbhandler.h  ksoutputhandler.cpp  ksxmlhandler.cpp  ksxslhandler.h
branches/0.2/src/misc/: ksdata.cpp  ksquery.h
branches/0.2/src/misc/widget/: kslistview.h  kslistviewitem.h  kslistviewsearchline.h
branches/0.2/src/styles/: Makefile.am
branches/0.2/src/styles/simple/images/: Makefile.am
tags/0.2.0/: ChangeLog
tags/0.2.0/admin/: Doxyfile.am
tags/0.2.0/doc/en/: Makefile.am
tags/0.2.0/src/: kslovar.desktop  kslovar.h
tags/0.2.0/src/configuration/: Makefile.am  ksappearance.cpp  kslovar.kcfg
tags/0.2.0/src/dialog/: ksphrase.cpp  ksupgrademanager.cpp
tags/0.2.0/src/handler/: ksdbhandler.cpp  ksxmlhandler.h
tags/0.2.0/src/misc/: ksdata.h
tags/0.2.0/src/misc/widget/: kssearchline.cpp
tags/0.2.1/: ChangeLog
tags/0.2.1/src/: kslovar.cpp  main.cpp
tags/0.2.1/src/configuration/: kswizard.h
tags/0.2.1/src/dialog/: kslanguage.h
tags/0.2.1/src/dialog/ui/: kslanguagewdt.ui  ksphrasewdt.ui  ksupgrademanagerwdt.ui
tags/0.2.1/src/handler/: ksxslhandler.cpp  ksxslhandler.h
tags/0.2.1/src/misc/: ksdata.h
tags/0.2.1/src/styles/simple/: simple-transitional.xsl
tags/0.2.2/: ChangeLog  Doxyfile
tags/0.2.2/doc/: Makefile.am
tags/0.2.2/po/: kslovar.pot
tags/0.2.2/src/: kslovar.cpp  main.cpp
tags/0.2.2/src/configuration/: ksappearance.h  kslovar.kcfg
tags/0.2.2/src/dialog/: Makefile.am  ksdictionary.cpp  ksphrase.cpp  ksupgrademanager.cpp
tags/0.2.2/src/handler/: ksdbhandler.cpp  ksoutputhandler.h  ksxslhandler.cpp  ksxslhandler.h
tags/0.2.2/src/misc/: Makefile.am
tags/0.2.2/src/misc/widget/: Makefile.am  kslistview.h  kslistviewitem.cpp  kssearchline.h
tags/0.2.2/src/sqlite/: Makefile.am
tags/0.2.6/admin/: acinclude.m4.in
tags/0.2.6/src/: vnd.kslovar.ksl.desktop
tags/0.2.6/src/configuration/: Makefile.am
tags/0.2.6/src/configuration/ui/: Makefile.am  kswizardwzt.ui
tags/0.2.6/src/dialog/: kscharselect.h  ksdictionary.h
tags/0.2.6/src/dialog/ui/: ksconversionwdt.ui
tags/0.2.6/src/handler/: ksxslhandler.h
tags/0.2.6/src/styles/simple/: Makefile.am
tags/0.2.7/: ChangeLog  Doxyfile
tags/0.2.7/po/: fr.po
tags/0.2.7/src/: Makefile.am  kslovar.desktop  kslovar.h  main.cpp
tags/0.2.7/src/configuration/: ksappearance.h  kswizard.cpp
tags/0.2.7/src/configuration/ui/: ksappearancewdt.ui
tags/0.2.7/src/dialog/: ksupgrademanager.h
tags/0.2.7/src/dialog/ui/: Makefile.am  ksdictionarywdt.ui
tags/0.2.7/src/misc/: ksquery.cpp
tags/0.2.7/src/misc/widget/: Makefile.am
trunk/: AUTHORS  ChangeLog  Doxyfile  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.in  configure.in.in  kslovar.kdevelop  kslovar.kdevelop.pcs  kslovar.kdevses
trunk/admin/: configure.in.bot.end  cvs.sh
trunk/autom4te.cache/: output.0  traces.0
trunk/doc/: Makefile.in
trunk/doc/en/: Makefile.in  index.docbook
trunk/src/: Makefile.am  Makefile.in  addphrase.cpp  addphrase.h  createdictionary.cpp  createdictionary.h  createdictionarydlg.ui  dbhandler.cpp  dbhandler.h  instances.cpp  instances.h  kslistview.cpp  kslistview.h  kslistviewitem.cpp  kslistviewitem.h  kslovar.cpp  kslovar.desktop  kslovar.h  kslovarui.rc  ksxmlhandler.cpp  ksxmlhandler.h  languages.ksl  main.cpp  vnd.kslovar.ksd.desktop  vnd.kslovar.ldft.desktop  vnd.kslovar.scmd.desktop
trunk/src/configuration/: Makefile.am  apperancesrc.cpp  apperancesrc.h  ksappearance.cpp  ksappearance.h  ksconfigdialog.h  kslovar.kcfg  kswizard.cpp  kswizard.h
trunk/src/configuration/ui/: Makefile.am  appearancewdt.ui  ksappearancewdt.ui  ksbehaviorwdt.ui  ksbehaviourwdt.ui  kswizardwzt.ui
trunk/src/dialog/: Makefile.am  addphrase.cpp  createdictionary.cpp  createdictionary.h  ksconversion.cpp  ksconversion.h  ksdictionary.cpp  ksdictionary.h  kslanguage.cpp  kslanguage.h  kslanguages.cpp  ksphrase.cpp  ksphrase.h  ksupgrademanager.cpp  ksupgrademanager.h
trunk/src/dialog/ui/: Makefile.am  addphrasewdt.ui  createdictionarywdt.ui  ksdictionarywdt.ui  kslanguagewdt.ui  ksphrasewdt.ui  ksupgrademanagerwdt.ui  languageswdt.ui
trunk/src/handler/: Makefile.am  dbhandler.cpp  ksdbhandler.cpp  ksdbhandler.h  ksoutputhandler.cpp  ksoutputhandler.h  ksxmlhandler.cpp  ksxmlhandler.h  ksxslhandler.cpp  ksxslhandler.h
trunk/src/misc/: Makefile.am  ksdata.cpp  ksdata.h  ksquery.h
trunk/src/misc/widget/: Makefile.am  kslistview.cpp  kslistview.h  kslistviewitem.cpp  kslistviewitem.h  kslistviewsearchline.cpp  kslistviewsearchline.h  kssearchline.cpp  kssearchline.h
trunk/src/objects/: Makefile.am  configuration.kcfgc  instances.cpp  instances.h  ksconfigdialog.cpp  ksconfigdialog.h  ksdata.cpp  ksdata.h  kslistview.cpp  kslistviewitem.cpp  kslistviewsearchline.cpp  kslistviewsearchline.h  kslovar.kcfg
trunk/src/sqlite/: Makefile.am
trunk/src/styles/: Makefile.am
trunk/src/styles/simple/: Makefile.am  simple-default.xsl  simple-transitional.xsl
trunk/src/ui/: Makefile.am  addphrasewdt.ui  appearancewdt.ui  apperancesrc.cpp  apperancesrc.h  createdictionarywdt.ui  languageswdt.ui
trunk/src/widgets/: Makefile.am  addphrase.cpp  addphrase.h  createdictionary.cpp  kslanguages.cpp  kslanguages.h
trunk/templates/: cpp
