INCLUDES = $(all_includes)
METASOURCES = AUTO
lib_LTLIBRARIES = libksobjects.la
libksobjects_la_LDFLAGS = $(all_libraries)
libksobjects_la_SOURCES = instances.cpp kslistview.cpp \
	kslistviewitem.cpp	kslistviewsearchline.cpp configuration.kcfgc ksdata.cpp

kde_kcfg_DATA = kslovar.kcfg
noinst_HEADERS = ksdata.h
